--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -13,7 +13,40 @@
 
 栄冠ナインは弱小をとにかく早く抜けたい。4枚でやりくりするのがきつい。
 
-## 1年目の目標
+## リセマラ
+
+初年度リセマラは強い投手や捕手が重要だけど、次にお調子者と内気。1年目はお調子者が強い。3年目は内気が強い。したたかや熱血漢も悪くはない。やんちゃ、クール、ごくふつうはハズレ。
+
+序盤が有利になる要素
+
+- 新入生が強い
+- 上級生に内気やしたたかが多い
+
+リセマラのポイントは、
+
+1. 強い投手（星300）
+2. お調子者や内気の枚数（それぞれ1枚以上あると強い）
+3. 強い捕手（キャッチャーA/B）
+
+野手は一人強くてもチームが勝てない。
+
+序盤は投手が弱いと厳しい。
+
+まず全員の星を確認して、星200超える選手がいなかったらリセットする。ただ、全員星100なら上級生次第でチーム力で行けるかも。まぁ、全員星100の方がレア。
+
+やっぱ栄冠ナインの序盤は野手だけ強くても試合に勝てなくて育てきれない。特に天才は特殊能力も少ないから本も溜め込んでおきたいし。
+
+1年目は天才より転生。
+天才は育てきれないので、キャAとか他の選手も何人か強くないときつい。
+
+## 開始直後の作業
+
+- 選手を確認して、ポジション変更を検討する
+
+1年目は3年生のポジションを変えて、1, 2年の強い選手を積極的に出したい。育てるというよりは、勝つために調整する。
+ポジション変更は3年生優先。もう卒業するので多少伸ばしても変わらない。
+
+## 一年目の目標
 
 - 秋大会終了時点で、学校の評判を中堅にする
 
@@ -41,42 +74,31 @@
 
 コンバートでもいいけど、できれば3年生を割り当てる。
 
-## 2年目の目標
+## 一年目の進行
+
+1年目はできるだけ牛歩。ボランティアを引けるようにカードを回す。
+
+## 一年目のスカウト
+
+できるだけ後回しにして、ボランティアや練習試合で中堅になれる可能性を残す。
+一月後半からスカウトカードを消化し始めるくらいでいい。合宿などで消えても戻ってくる。
+
+序盤は質も大事だけど、まずは量。ベスト4くらいの選手をたくさん取れるといい。特に弱いポジションを補強する。
+
+## 二年目の目標
 
 - 秋大会終了時点で、学校の評判を強豪にする
 - 春大会に出場する
 
-2年目はできれば春夏の甲子園に出たい。夏の県大会を勝ち抜くのと、秋の全国まで勝ち進むのと。
+2年目はできれば春夏の甲子園に出たい。夏の県大会を勝ち抜くのと、秋の全国まで勝ち進むのと。春優先。
 
-## 3年目の目標
+## 二年目のスカウト
 
-- 夏の甲子園大会で優勝する
+三年縛りなら天才や転生、キャAなどの即戦力狙い。転生が強い都道府県を狙う。
 
-## リセマラ
+## 三年目の目標
 
-序盤が有利になる要素
-
-- 新入生が強い
-- 上級生に内気やしたたかが多い
-
-リセマラのポイントは、
-
-1. 投手の星300転生。
-2. 次に内気の枚数。1枚は欲しい。
-3. 野手は一人強くてもチームが勝てない。最後。ただ、捕手のキャBは強い。
-
-序盤は投手が弱いと厳しい。
-
-まず全員の星を確認して、星200超える選手がいなかったらリセットする。ただ、全員星100なら上級生次第でチーム力で行けるかも。まぁ、全員星100の方がレア。
-
-やっぱ栄冠ナインの序盤は野手だけ強くても試合に勝てなくて育てきれない。特に天才は特殊能力も少ないから本も溜め込んでおきたいし。
-
-1年目は天才より転生。
-天才は育てきれないので、キャAとか他の選手も何人か強くないときつい。
-
-## スカウト
-
-序盤は人数が少ないので、スカウトでも投手よりもまず弱いポジションを補強する。
+- 夏の甲子園大会で優勝する（三年縛りなら特に試合数を稼ぐ）
 
 ## 評判を上げる
 
