--- a/games/Street-Fighter/Six/characters/使用キャラを選ぶ.md
+++ b/games/Street-Fighter/Six/characters/使用キャラを選ぶ.md
@@ -38,6 +38,8 @@
 
 スト6はモダンがあるので、最初に選ぶキャラはタメキャラじゃない方がいい。SPで無敵昇竜が出るキャラがいい。
 
+スト6は攻めキャラでもDリバやパリィのおかげでそこまで守りが弱くはならないので、まずは攻めキャラを使ったほうが楽しめると思う。
+
 ## モダン適性が高いキャラ
 
 ほぼ性能が落ちない:
