--- a/shared/achievement/project/frameworks/正しいウォーターフォール.md
+++ b/shared/achievement/project/frameworks/正しいウォーターフォール.md
@@ -5,3 +5,5 @@
 欠陥品を見つけて、ラインから除外するのと同じ。
 
 実装に入った時点から仕様や設計の変更が全くないのでなければ、ウォーターフォールとは言えない。
+
+プログラムを作って、動かしてみて、エラーが出たから直す、ということを一度でも行ったら、それはウォーターフォールとは言えない。
