--- a/shared/singing/tips/キーを変えて歌う.md
+++ b/shared/singing/tips/キーを変えて歌う.md
@@ -82,3 +82,5 @@ https://note.com/atano/n/n3c01c44d8bae
 キー1つくらいなら調整せずに原キーの方がいい。
 
 DAMの「おすすめキー」みたいな機能は歌いやすいキーというだけなので、曲の雰囲気を考えると少し高めにした方がいい場合もある。
+
+カラオケでキーを変える時は特に伴奏がしっかり聞こえるくらいのミュージック音量にしたほうがいい。
