--- a/shared/voice/良い声とは.md
+++ b/shared/voice/良い声とは.md
@@ -67,3 +67,7 @@ http://hira0888.life.coocan.jp/asu124.html
 ただ、歌うときにピッチを変えづらいとか他の課題と複合した場合にどうするかが問題。良い歌い方と上手く統合させる必要がある。
 
 裏声は表現の幅が狭い。まずは地声で出すことを考える。
+
+オペラの練習方法は、みんながリコーダーで演奏するのを、自分だけグランドピアノやパイプオルガンにする練習だ。
+
+息が抜けていくような歌い方を標準にするべきではない。まずはちゃんと力を入れて歌えるようにする。
