--- a/shared/decision/判断.md
+++ b/shared/decision/判断.md
@@ -112,3 +112,5 @@ Know 知る
 
 トロッコ問題は「介入」の問題。放っておけば5人が死ぬが、自分が介入して助けようとすると別の1人が死ぬ。あるいは1人を殺すと言ってもいいかも。
 つまり、1人を殺して5人を助けるか、5人死ぬのを放っておくか、の二択。
+
+選ぶのが面倒で、譲るのが楽な人もいる。
