--- a/shared/singing/tips/曲を覚える.md
+++ b/shared/singing/tips/曲を覚える.md
@@ -118,3 +118,5 @@
 まずは息を十分確保できるくらいゆっくり歌ってリズムとメロディを取る。速く歌うとブレスが問題になるので、ゆっくりしたテンポから上げながら調整する。
 
 まずは原キーで覚えて、高音や低音が出なかったらオクターブで上げ下げする。原曲とテンションが違っても後回し。
+
+うろ覚えの曲は聴きながら歌う回数が足りない。まずはちゃんとリズムやメロディを覚える。声色とかの細かい表現は後回しでもいい。
