--- a/shared/thinking/tips/意見を集める.md
+++ b/shared/thinking/tips/意見を集める.md
@@ -37,3 +37,6 @@ https://coach.co.jp/view/20191204.html
 
 一般ユーザーの意見は浅い。言葉の裏を汲み取らないといけない。
 開発者でもありユーザーでもある人なら、どういうサービスが使いやすいかもっと具体的に言葉にできる。
+
+作品の感想は数が重要で、好評も悪評もあっていい。話題になったこととは別に、それだけ多くの人を動かしたということが重要。話題になったのはその過程でしかない。多くの人を動かす作品でも人目に触れないと影響を与えない。
+普通の人は悪評をわざわざ口にしない。それでももし悪評が多かったとしたら、受け取りきれなくて口に出さないといけない何かがあったということ。作品として間違いではない。
