--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
@@ -210,6 +210,8 @@
 満塁は意外と点が取れない。ホームでタッチしなくてもアウトになるし、ゲッツーもある。
 満塁になりにくい戦術選択が優位。
 
+基本的にスキルや伝令は後半のチャンスにまとめて切るべきだけど、満塁の時は点が入りにくいので積極的に切ってもいい。あと強心臓もチャンスでしか意味がないので早めに切ってもいい。お祭り男は重複しないので、複数枚あるなら早めに1枚切ってもいい。
+
 ### 選手を育てるための戦術
 
 余裕があれば経験値重視で戦術を選びたい。
