--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -185,6 +185,8 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 ミートAとBはあんま変わらない気がする。なんならCからあんま打率変わってない気もする。走力優先の方がいいか？
 
+打率高くて盗塁できる選手が強い。盗塁は経験値も良い。
+
 ## 野手の特殊能力
 
 - S:
