--- a/shared/devotion/frameworks/meditation/座禅.md
+++ b/shared/devotion/frameworks/meditation/座禅.md
@@ -9,3 +9,7 @@
 坐禅の時に力を抜いてたけど、最初はぷるぷるしてもいいからとにかく良い姿勢を保つ意識の方が良さそう。
 
 座禅の後はゆっくりと体育座りにして、体をゆっくり前後に揺らすと足が痺れにくい。
+
+坐禅の呼吸はゆっくり吐くというより、横隔膜をゆっくり戻す。
+
+座禅の際にゆっくりと息を吐くのは、まず腹式呼吸で大きく吸って横隔膜を下げて、ゆっくりと力を抜いて横隔膜を戻していく。腹筋や肋間筋には力を入れない。
