--- a/shared/voice/training/tips/ビブラートをかける.md
+++ b/shared/voice/training/tips/ビブラートをかける.md
@@ -120,3 +120,7 @@ https://youtube.com/watch?v=OiaaZBhYXr8&si=mZ_JMf_Nu_DebYaN
 息を支えると自然とビブラートがかかる。
 
 楽して声を出すと自然なビブラートにならない。自然に息を吐くのを横隔膜で押さえ込んでこそビブラートがかかる。楽して息を吐かない。
+
+力強く歌わない時でも横隔膜と腹筋の均衡を維持することでビブラートをかける。腹筋が弱い時は横隔膜も弱く、腹筋が強い時は横隔膜も強く。
+
+力強く声を出すときに横隔膜が腹筋に負けるとビブラートがかからない。
