--- a/shared/voice/training/tips/息を漏らす.md
+++ b/shared/voice/training/tips/息を漏らす.md
@@ -4,6 +4,10 @@
 
 息の量が多いと声量は出ない。
 
-息を漏らした方がいい曲:
+息を漏らした方がそれっぽい曲もある。
 
-- 酔いどれ知らず
+特に女性はそもそも少し息が漏れていて、胸式呼吸気味なので、女性曲は多少息を漏らすくらいでちょうどいい。
+
+ポップスの高い曲も基本的に息漏れした曲と考えた方がいい。
+
+あえて息漏れする場合、息を支えすぎると息の量が足りない。
