--- a/shared/lifestyle/meal/食事.md
+++ b/shared/lifestyle/meal/食事.md
@@ -38,3 +38,5 @@
 蝋、ワックスは脂肪酸にアルコールが結合したもので、グリセリンが結合した脂と近い性質がある。
 ただ、酸化(加熱)や加水分解に強く、人体で分解できない。バラムツなどの蝋を多く含む食材を食べると分解されずにそのまま出てくるし、下痢になる。
 融点は脂より高く、気体は燃えやすい。
+
+殻付きの茹で玉子なら冷蔵庫で3-4日くらいは置いても大丈夫。まぁ、早めに食べた方がいいけど、すぐどうにかなるものではない。
