--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -111,8 +111,9 @@
 優先度が高いのは以下の三つ。
 
 1. ティー: 打撃
-2. ストップウォッチ: 走塁
-3. むにむにボール: 変化球
+2. 仮設シャワー: 1マス確定カードを増やす
+3. ストップウォッチ: 走塁
+4. むにむにボール: 変化球
 
 序盤は特に投手が重要なので、変化球を強化できるむにむにボールは優先して導入したい。
 
