--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -27,6 +27,7 @@
 ## 技の長さ
 
 - 通常投げ
+- LP, 2LP
 - 2LP
 - {C} LP
 - {C} MP
@@ -57,3 +58,5 @@ AC3から中サンダー派生でステップして中足が持続当て。
 - https://youtube.com/watch?v=j2m8Hj3FaI0&si=w--B_BgbWYQOXerh
 
 2MKの方が長いはずだけど、ミラーだとMKの方が判定強い気がする。前に出てないのかも。
+
+適当な技を当てると左右を入れ替えられるのが強い。
