--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -68,6 +68,13 @@
 - {端}
   - J.HK: 4F詐欺
 
+## 弱/中/強バニ: 38
+
+- ステップ
+  - {後方受け身}
+    - 前J.HK: 表
+    - 前J.MK: 裏
+
 ## 弱/中/強バニ(+4): 42
 
 - J.HP: 5F詐欺
@@ -94,6 +101,10 @@
 - ステップ: +3
   - 2MP
   - 前投げ
+
+## SA1: 24
+
+- ステップ: +3
 
 ## SA2: 19
 
