--- a/shared/sleep/仮眠.md
+++ b/shared/sleep/仮眠.md
@@ -31,3 +31,7 @@
 
 次の睡眠の13時間前を超えたら20分以上の仮眠は避けるべき。仮眠というか本格的に寝てるけど。さらに8時間前を超えたら仮眠自体避けるべき。
 睡眠というのは朝に作ったセロトニンが眠気に作用するホルモンに変わることで深く眠れるようになるので、途中で長く寝てしまうと夜は浅い眠りになってしまう。
+
+眠くなる前に仮眠する。
+眠くなってから寝ると寝すぎる。
+実際に眠らなくても、リラックスできる状態で目を閉じてまどろむだけでもいい。
