--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの序盤.md
@@ -149,6 +149,8 @@
   - 2年目は夏より秋と春が重要
   - 2年目のスカウトはとにかく転生狙い
 
+正直、3年縛りはかなり運ゲー。1年目に中堅になるまで勝って、スカウトで良い補強ができないとなかなか伸びない。
+
 3年縛りは、評判を上げつつ、3年目夏にピークを持ってこないといけない。下級生ばかり育ててもいけないし、上級生ばかり育ててもいけない。
 
 3年縛りは終わった後に誰かと対戦させた方が楽しいかも。
