--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの試合.md
@@ -13,8 +13,11 @@
 盗塁できる選手が前。
 
 打順はまずベースが打率順で、そこから盗塁ができる選手が前。あとチャンスが苦手な選手も前。
+基本的に1,2番はチャンスに弱い選手、3,4番はチャンスに強い選手にしたい。2番は単に一番出塁率も長打率も高い選手でもいい。
 
 威圧感（野手）は一つ前の打者にもかかるので、2番手以降に置いて、連続しないほうがいい。
+
+栄冠ナインの打順は戦術も考慮する。1番内気から2番お調子者に続く流れが強い。
 
 ## 大会の準備
 
