--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -10,6 +10,8 @@
 S90になったらそれ以上は必要ない。
 また、1ヶ月でランクが上がるくらいの数値なら上げてしまうのもいい。とくにF38-F39とか。試合で上がるなら放っておいてもいい。
 
+投手が強くても、総合戦力の守備力が低いとエラーが増える。戦力評価で言うと3/5くらいあるとかなりマシ。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
