--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -18,9 +18,14 @@
 シミーは2HPが基本。2MP(pc)だと2HPに繋ぐのがギリギリの距離。
 2HP(pc)から伸ばしてもいいし、単に2HPコンボでもいい。
 
+## LP
+
+- LP, 2LP 2回, LK, 強サンダー(+1)-PP
+
 ## LP(c)
 
-- LP(c), 2MP, 弱サンダー
+- LP(c), LK, 中/強サンダー
+- LP(c), 2MP, 弱/中/強サンダー
 
 ## HP
 
@@ -29,7 +34,8 @@
 ## 2LK
 
 - 2LK, 2LP 2回, LK, 中サンダー: 1280
-- 2LK, 2LP 2回, LK, 強サンダー: 1280
+- 2LK, 2LP 2回, LK, 強サンダー(+1): 1280
+- 2LK, 2LP 2回, LK, 強サンダー(+1)-PP: 1280
 
 ## 2MP
 
@@ -152,3 +158,9 @@ HKで拾うコンボが結構あるのでMきついかも。
 - セイスモ, JC 強サンダーC, DR 2HP
 
 ハイジャンプキャンセルは先行入力というよりタイミングよく下を入れる。下が早いと出ない。攻撃がヒットする瞬間に下を入れてからコマンドに入る。
+
+差し返しMK/2MKからは弱セイスモが入るのでがんばりたいところ。
+
+小技3回からLK弱サンダーPPは持続でステップから投げとシミーがある。
+
+HP(pc), 強サンダーC, 2HPルートはクソ減る。差し返しで狙えるとなおいいけど、発生が遅いので難しいところ。
