--- a/shared/entertainment/プレイリスト.md
+++ b/shared/entertainment/プレイリスト.md
@@ -5,3 +5,8 @@
 - 仕事・作業: 退屈にならないもの
 - 睡眠・集中: 静かなもの
 - 勉強: 勉強用
+
+プレイリストはもはや「後で見る」と「何度も見る」だけでいいのかも。
+あとはプレイリスト単位でリピート、シャッフル再生するようなものだけ個別に切り出すとか。
+
+何度も見るやつだけプレイリストにして、まだ見てないのは全部「後で見る」でいい気もする。
