--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -3,6 +3,11 @@
 - HP, 上JC 中バニ: 表
 - HP, 前JC 中バニ: 裏
 
+## DR 2HP, 強バニ: 38
+
+- 前HJ.MK: 後方受け身に対して裏落ち
+- 前HJ.HK: 後方受け身に対して表落ち
+
 ## 前投げ
 
 - 強セイスモ: 昇竜暴れが届かない、SAは技によって届くこともある、-5で大足の外
@@ -58,10 +63,15 @@
 
 - ステップ: +4、ゼロ距離、後退しても投げられる
 
-距離によっては26になる。
-26になったらゼロ距離にはならずに、後退がシミーになる。
+## 強サンダー(+1)-PP: 26
 
-セイスモ, 強サンダーPPは26になる。
+持続なしの場合よりも少し遠くて、ゼロ距離にならない。
+ステップから後退がシミーになる。
+
+主なルート:
+
+- LP/2LP/2LK, 2LP 2回, LK, 強サンダー
+- セイスモ, 強サンダー
 
 ## ODサンダー: 42
 
