--- a/shared/music/tips/リズムを取る.md
+++ b/shared/music/tips/リズムを取る.md
@@ -5,3 +5,5 @@
 リズムに慣れる時は口ずさむのと、体幹を揺らして腰でリズムを取る。
 
 リズムはまず120BPMが基礎。これくらいの曲が多い。慣れてきたら60BPMと180BPMにも慣らす。60BPMはかなり遅くて、実際にこのテンポの曲はまずない。
+
+3拍子のリズムは3つとも大きめに体を揺らすくらいでいい。強中中くらい。
