--- a/shared/pain/恩.md
+++ b/shared/pain/恩.md
@@ -36,3 +36,5 @@ favor を恩とする場合がある。
 恩があっても害があるなら切り捨てないといけない。残していいのは今後も貸し借りができる人だけ。
 
 親が子を産んだというのは過去の価値であって、今の価値ではない。
+
+恩とか義理とかの概念は、記憶力が良くないと扱えない。忘れる。
