--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -40,6 +40,7 @@
 ## 2MP
 
 - 2MP, 弱/中/強サンダー: 1500
+- 2MP, 弱サンダーPP: 1980
 - 2MP, ODサンダー: 2200
 - 2MP, ODセイスモ, JC 強バニ, ...: ダメージは2HP, 弱セイスモと同じ
 - 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
