--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -1,6 +1,8 @@
 ## 対空
 
 - 強サンダーPP
+  - ステップ
+    - 前進, 前投げ
 
 ## 弱サンダーで締めるコンボ
 
@@ -33,13 +35,15 @@
 - DI(壁), 2HP, 弱セイスモ, ...
 - {Dリバ}, 2MP(pc), 2HP, 弱セイスモ, ...
 
-## 小技から
+## 小技から強サンダーに繋ぐ
 
-- LP/2LP/2LK,
+- LP/2LP/2LK, 2LP 2回, ガード
+- LP/2LP/2LK, 2LP 2回, LK, 強サンダーPP
+  - ステップ
+    - 前投げ
+    - 前進
 
-## ラッシュ下段からのコンボ
-
-- DR 2MK, 2HP, 弱セイスモ, ...
+持続当てになるのでシミーを狙う。
 
 ## 密着の攻め
 
@@ -47,6 +51,10 @@
   - {ヒット}, LK, 強サンダーPP
     - ステップ, 前投げ
   - {ガード}, ガード
+
+## ラッシュ下段からのコンボ
+
+- DR 2MK, JC 弱セイスモ, ...
 
 ## 端の前投げから中バニ
 
