--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -1,3 +1,7 @@
+## 起き攻めに重ねる技
+
++5以上あるなら2HP, 強サンダーCが基本。ガードされても-1で投げ間合いの外。
+
 ## 技を当ててジャンキャンバニ
 
 - HP, 上JC 中バニ: 表
@@ -91,7 +95,14 @@
 
 ## 弱/中/強バニPP: 23
 
-- 6MP(+1)
+- 前進
+  - 前投げ
+  - ガード: シミー
+- ステップ: +2
+- {中央} HJ 中空バニ: 後方受け身なら表、端やその場受け身なら裏で、ガードされても五分
+- {中央} HJ OD空バニ: 後方受け身なら裏に回って、ガードされても+4、その場受け身には空振り
+- {端} 6MP(+1)
+  - LP/2LP, 2LP, ...
 
 ## セイスモ, JC 強バニ: 56
 
