--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -52,23 +52,27 @@
 
 +6の最大コンボ。
 
-## 2HP
+## 2HP: 2 (24)
 
 - 2HP, 弱セイスモ, 強サンダー: 2220
 - 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー: 2850
 - 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP: 3120
 - 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3150
-- 2HP, 弱セイスモ, JC 強バニ, SA1: 3620
-- 2HP, 弱セイスモ, JC 強バニ, SA2: 4320
-- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 4770
-- 2HP, 弱セイスモ, JC 強バニ, SA3: 5020 (AC3)
+- 2HP, 弱セイスモ, JC 強バニ, SA1(70%): 3620
+- 2HP, 弱セイスモ, JC 強バニ, SA2(70%): 4320
+- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2(50%): 4770
+- 2HP, 弱セイスモ, JC 強バニ, SA3(70%): 5020 (AC3)
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5270
 
-## 2HP, 強サンダーC, 2MP
+## 2HP, 強サンダーC: 6
 
 - 2HP, 強サンダーC, 2MP, 弱サンダーPP: 2540
+- 2HP, 強サンダーC, 2MP, 弱サンダーPP, SA3: 4540
+- 2HP, 強サンダーC, 2MP, ODサンダー, SA2(60%): 4480
 
 弱セイスモよりもヒット確認しやすいルート。
+
+パッドのモダンだと6SPで強サンダーとほぼ同時にDPでキャンセルするのが出しやすいと思う。
 
 ## 2HP(pc)
 
