--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -7,6 +7,7 @@
 ## 弱サンダーで締めるコンボ
 
 - 2MP, 弱サンダーPP
+  - SA3
   - ステップ
     - 前進, 前投げ
 
@@ -56,14 +57,24 @@
 
 - DR 2MK, JC 弱セイスモ, ...
 
+## 下段から中バニ
+
+- 2MK, JC 中空バニ
+  - {ヒット}
+    - ステップ 2回
+      - LP/2LP, 2LP, ...
+  - {ガード}
+    - LP/2LP, 2LP
+
 ## 端の前投げから中バニ
 
 - {端} 前投げ
-  - 中バニ
+  - 中バニ(+4)
     - {ヒット}
       - J.HP, ...
     - {ガード}
       - 前投げ
+      - 後退
 
 ## 端の前投げからシミー
 
@@ -76,3 +87,20 @@
       - {通常投げ}, 2HP, ...
       - {無敵技}, 2HP, ...
       - {何もしない}, 前進, 前投げ
+
+## 強攻撃から中攻撃に繋ぐコンボ
+
+- 2HP, 強サンダーC
+  - {ヒット}
+    - 2MP, 弱サンダーPP, ...
+    - 2MP, ODセイスモ, JC 中/強空バニ, ...
+  - {ガード}
+    - ガード
+
+モダンだと起き上がりに重ねて中攻撃に繋がるルートがこれしかないので優先度が高い。
+
+## 負荷の高いサンダーキャンセルコンボ
+
+- 2HP, 強サンダーC, 2MP, DR 2HP, 強サンダーC, 2HP, 強サンダーC, 2MP, DR 2HP, 強サンダーC, 2HP, 強サンダーC, 2MP, 弱サンダー, SA3
+
+サンダーキャンセルを手に馴染ませる。
