--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -30,6 +30,12 @@
     - 2MK
   - 中バニ, 2MP
 
+## {中央} 前投げ(pc)
+
+- 強バニ(+2): ヒットして+45
+  - {ガード}: 五分
+    - 後退: シミー
+
 ## 後投げ
 
 - {端}
@@ -104,6 +110,11 @@
 - {端} 6MP(+1)
   - LP/2LP, 2LP, ...
 
+## HJ OD空バニ: 41
+
+- ステップ
+  - HJ OD空バニ: 後方受け身に裏
+
 ## セイスモ, JC 強バニ: 56
 
 - 強バニ: 裏に回って+5、ゼロ距離
@@ -133,4 +144,5 @@
 
 ## SA3: 21
 
+- 前HJ: 最速無敵技が裏に出て当たらない
 - DI: ジャンプできない
