--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -13,6 +13,13 @@
 
 この辺りからは2HPに繋いでおけば安牌。
 
+## ジャンプキャンセルのコツ
+
+ジャンプキャンセルはタイミングが大事。
+先行入力ではなく、しっかりキャンセルできるタイミングでコマンドを入れる。
+
+モダンの場合、SPボタンの空バニの入力が早すぎてセビになることがあるので、セビになっても漏れないようにSPボタンを長めに押すか、空バニも2SPで出すといい。
+
 ## シミー
 
 シミーは2HPが基本。2MP(pc)だと2HPに繋ぐのがギリギリの距離。
@@ -27,9 +34,13 @@
 - LP(c), LK, 中/強サンダー
 - LP(c), 2MP, 弱/中/強サンダー
 
-## HP
+## HP, JC 強サンダーC: 6
 
-- HP, JC 強サンダーC
+- HP, JC 強サンダーC, 2MP,
+
+## MK
+
+- MK, JC 中サンダー: 1600
 
 ## 2LK
 
@@ -37,8 +48,9 @@
 - 2LK, 2LP 2回, LK, 強サンダー(+1): 1280
 - 2LK, 2LP 2回, LK, 強サンダー(+1)-PP: 1280
 
-## 2MP
+## 2MP: 5 (23)
 
+- 2MP, LK, 強サンダーPP: 1970
 - 2MP, 弱/中/強サンダー: 1500
 - 2MP, 弱サンダーPP: 1980
 - 2MP, ODサンダー: 2200
@@ -58,9 +70,12 @@
 - 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー: 2850
 - 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP: 3120
 - 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3150
+- 2HP, 弱セイスモ, SA1(80%): 3100
 - 2HP, 弱セイスモ, JC 強バニ, SA1(70%): 3620
+- 2HP, 弱セイスモ, SA2(80%): 3900
 - 2HP, 弱セイスモ, JC 強バニ, SA2(70%): 4320
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2(50%): 4770
+- 2HP, 弱セイスモ, SA2(80%): 4700
 - 2HP, 弱セイスモ, JC 強バニ, SA3(70%): 5020 (AC3)
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5270
 
@@ -74,22 +89,45 @@
 
 パッドのモダンだと6SPで強サンダーとほぼ同時にDPでキャンセルするのが出しやすいと思う。
 
-## 2HP(pc)
+## 2HP(c), 強サンダーC: 8
+
+- 2HP(c), 強サンダーC, 2MK, JC 弱サンダーPP: 2700
+- 2HP(c), 強サンダーC, ODバニ, SA2(70%): 4560
+- 2HP(c), 強サンダーC, 2MK, JC ODサンダー, SA2(60%): 4640
+- 2HP(c), 強サンダーC, ODバニ, SA3(60%): 4860
+- 2HP(c), 強サンダーC, 2MK, JC 弱サンダーPP, SA3: 4700
+- 2HP(c), 強サンダーC, 2MK, JC ODサンダー, SA3: 4840
+
+2MKをMKにすると100伸びるけど、2MKの方が長くて当たりやすい。
+
+## 2HP(pc), 強サンダーC: 10
 
 - 2HP(pc), 強サンダーC, 2HP, 強サンダーC, 2MP, 弱/中/強サンダー
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3740
-- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA1(60%): 4150
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA2(60%): 4750
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5050
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA3(60%): 5350
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5850
+
+## 2MK: 5
+
+- 2MK, JC 中サンダー: 1320
+- 2MK, JC 中サンダーPP: 1740
+- 2MK, LK, 強サンダー(+1)-PP: 1770
 
 ## 2MK(c)
 
 - 2MK(c), 弱セイスモ, ...
 
-## {近} DR 2MK
+パニカンでも同じルートでいい。
+
+## DR 2MK: 9
 
 - DR 2MK, 2HP, 弱セイスモ, ...
 
-## {遠} DR 2MK
+## DR 2MK, JC 弱セイスモ
 
 - DR 2MK, JC 弱セイスモ, ...
 
@@ -102,16 +140,54 @@
 - DR 6MP, 2MP, CR HP, 強サンダーC, 2HP, ...
 - DR 6MP, 2MP, ODセイスモ, ...
 
-## 弱/中セイスモ
+## 6HK: 4
 
-- 弱/中セイスモ, JC 強バニ, 強サンダー
-- 弱/中セイスモ, JC 強バニ, SA3
+- 6HK, LP/2LP, 2LP, LK, 強サンダー(+1)-PP: 2180
 
-## セビ(最大溜め)
+## DR 6HK: 8
 
-- ODセビFC, 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 4320 (M:3920)
-- ODセビFC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5620 (M:5220)
-- ODセビFC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 6420 (M:6020)
+- DR 6HK, 2MP, ODセイスモ, JC 強空バニ, 強サンダーPP: 3200
+- DR 6HK, 2MP, ODセイスモ, ODバニ, SA2: SA2: 4110
+
+## DR 6HK(c): 10
+
+- DR 6HK, 2HP, 弱セイスモ, JC 強空バニ, 強サンダーPP: 3400
+
+2段目が当たるくらいで振ると判定が強くて潰しやすい。
+
+## 弱/中/強セイスモ
+
+- 弱/中/強セイスモ, JC 強空バニ, 強サンダーPP: 2400
+- 弱/中/強セイスモ, JC 強空バニ, SA2(70%): 3660
+- 弱/中/強セイスモ, JC 強空バニ, SA3(70%): 4360
+
+距離があると強サンダーが届きにくい。
+
+遠目で狙う場合は強バニにしないと届きにくいので、モダンでもSPの中バニよりコマンド入力した方がいい。
+
+## 弱サンダー(pc): 5
+
+- 弱サンダー(pc), LK, 中サンダー: 2100
+- 弱サンダー(pc), LK, 強サンダーPP: 2450
+
+## 中サンダー(pc): 6
+
+弱サンダーより短いし、2MPも短いので基本的には弱サンダーと同じLKルートの方が無難。
+
+## セビ(L2)(pc): 8
+
+- セビ(L2)(pc), 2MP, 弱サンダーPP: (M:1896)
+
+レベル2は脚に炎を纏う。
+基本的に、相手の攻撃を受けて自動で出た場合はレベル1か2だと思っていい。
+
+ODの場合は600(M:440)ダメージ伸びる。
+
+## セビ(L3)
+
+- ODセビ(L3), 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 4320 (M:3920)
+- ODセビ(L3), 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5620 (M:5220)
+- ODセビ(L3), 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 6420 (M:6020)
 
 ODセビは2000ダメージ、通常のセビは1400ダメージ。
 モダンはODセビが1600ダメージ、通常のセビが1120ダメージ。
@@ -165,7 +241,10 @@ HKで拾うコンボが結構あるのでMきついかも。
 ハイジャンプキャンセルは先行入力というよりタイミングよく下を入れる。下が早いと出ない。攻撃がヒットする瞬間に下を入れてからコマンドに入る。
 
 差し返しMK/2MKからは弱セイスモが入るのでがんばりたいところ。
+2MKだと補正が重いので、できればMKからの方がいい。
 
 小技3回からLK弱サンダーPPは持続でステップから投げとシミーがある。
 
 HP(pc), 強サンダーC, 2HPルートはクソ減る。差し返しで狙えるとなおいいけど、発生が遅いので難しいところ。
+
+セイスモ, JC 強空バニは中空バニでも可。
