--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -12,6 +12,12 @@
 - 前HJ.MK: 後方受け身に対して裏落ち
 - 前HJ.HK: 後方受け身に対して表落ち
 
+## 2HK(pc): 45
+
+- ステップ 2回: 3
+  - 2LK, 2LP 2回
+  - 前投げ
+
 ## 前投げ
 
 - 強セイスモ: 昇竜暴れが届かない、SAは技によって届くこともある、-5で大足の外
@@ -107,6 +113,8 @@
 - ステップ: +2
 - {中央} HJ 中空バニ: 後方受け身なら表、端やその場受け身なら裏で、ガードされても五分
 - {中央} HJ OD空バニ: 後方受け身なら裏に回って、ガードされても+4、その場受け身には空振り
+- {中央} DR HP
+  - 前JC 中空バニ: めくり
 - {端} 6MP(+1)
   - LP/2LP, 2LP, ...
 
