--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
@@ -8,3 +8,6 @@
 ## その他
 
 ヴァイパーは後退がシミーになる場面があまりない。最速暴れは択の一つ。
+
+セイスモにパリィを合わせて、相手がキャンセルしてもしなくてもラッシュするのは一つの手。
+セイスモフェイントは27Fあるので、ラッシュが速いキャラなら確定する場合もある。
