--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -4,24 +4,11 @@
   - ステップ
     - 前進, 前投げ
 
-## 弱サンダーで締めるコンボ
-
-- 2MP, 弱サンダーPP
-  - SA3
-  - ステップ
-    - 前進, 前投げ
-
-## 強サンダーで締めるコンボ
-
-- LK, 強サンダーPP
-  - ステップ
-    - 前投げ
-
 ## セイスモコンボ
 
-- 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP
+- 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP
   - ステップ
-    - 2MK
+    - 2HP, ...
     - 前進, 前投げ
     - 後退
 - 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
@@ -36,22 +23,44 @@
 - DI(壁), 2HP, 弱セイスモ, ...
 - {Dリバ}, 2MP(pc), 2HP, 弱セイスモ, ...
 
+## 柔道
+
+（ダウンリバーサル: 通常投げ 3Fディレイ）
+
+- {端} 前投げ
+  - 前進
+    - 2HP, ...
+    - 前投げ
+    - ガード: 投げられない距離で止まる
+
 ## 小技から強サンダーに繋ぐ
 
-- LP/2LP/2LK, 2LP 2回, ガード
-- LP/2LP/2LK, 2LP 2回, LK, 強サンダーPP
+- LP/2LP/2LK, 2LP 2回
+  - {ヒット}
+    - LK, 強サンダー(+1)-PP
+      - ステップ
+        - 2MK
+          - {ヒット}
+            - LK, 強サンダー(+1)-PP, ...
+          - {ガード}
+            - ガード
+        - 前投げ
+        - 後退: シミー
+  - {ガード}
+    - ガード
+
+持続当てになるのでシミーを狙える。
+
+## 弱サンダーで締めるコンボ
+
+- 2MP, 弱サンダーPP
+  - SA3
   - ステップ
-    - 前投げ
-    - 前進
+    - 前進, 前投げ
 
-持続当てになるのでシミーを狙う。
+## ラッシュ中段から弱サンダーに繋ぐ
 
-## 密着の攻め
-
-- 2MP/2MK
-  - {ヒット}, LK, 強サンダーPP
-    - ステップ, 前投げ
-  - {ガード}, ガード
+- DR 6MP, 2MP, 弱サンダーPP, ...
 
 ## ラッシュ下段からのコンボ
 
@@ -76,18 +85,6 @@
       - 前投げ
       - 後退
 
-## 端の前投げからシミー
-
-（反撃設定 > ダウンリバーサル: 無敵技、何もしない）
-（反撃設定 > ダウンリバーサル: 通常投げ 3Fディレイ）
-
-- {端} 前投げ
-  - 前進
-    - ガード
-      - {通常投げ}, 2HP, ...
-      - {無敵技}, 2HP, ...
-      - {何もしない}, 前進, 前投げ
-
 ## 強攻撃から中攻撃に繋ぐコンボ
 
 - 2HP, 強サンダーC
@@ -97,6 +94,9 @@
   - {ガード}
     - ガード
 
++5以上の起き上がりで頻出。
+相打ちになった場合の処理も考えると、強サンダー(+1)-PPから重ねる練習でもいい。
+
 モダンだと起き上がりに重ねて中攻撃に繋がるルートがこれしかないので優先度が高い。
 
 ## 負荷の高いサンダーキャンセルコンボ
@@ -104,3 +104,7 @@
 - 2HP, 強サンダーC, 2MP, DR 2HP, 強サンダーC, 2HP, 強サンダーC, 2MP, DR 2HP, 強サンダーC, 2HP, 強サンダーC, 2MP, 弱サンダー, SA3
 
 サンダーキャンセルを手に馴染ませる。
+
+## 負荷の高いセイスモ連打
+
+- 弱セイスモ 2回, 中セイスモ
