--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -49,7 +49,7 @@
   - DR 2MK(+1): ヒットで2HP、ガードで+4
   - DR(+8F以上) 前投げ: 最速で5F遅れ
 
-## 弱サンダーPP
+## 弱サンダーPP: 37
 
 - ステップ
   - 前進
@@ -59,7 +59,7 @@
 - DR 2MK
 - {端}
   - LP
-    - 6MP
+    - 6MP(+2)
     - LK
       - 前投げ
 
@@ -80,6 +80,11 @@
 - ステップ: +4、ゼロ距離、後退しても投げられる
 
 ## 強サンダー(+1)-PP: 26
+
+- 2MK, LK, 強サンダー(+1)-PP: 同じ状況でループする
+- 2HP, 強サンダーC: 相打ちから2HPが入る
+- 前投げ
+- 後退: シミー
 
 持続なしの場合よりも少し遠くて、ゼロ距離にならない。
 ステップから後退がシミーになる。
@@ -129,10 +134,13 @@
 
 ## セイスモ, JC 強バニ, 強サンダーPP: 28
 
+- DR 弱セイスモ
+
 中バニ(+4)が重なるフレームだけど、中央ではガードされたあと投げに行けないので微妙。
 
 ## セイスモ, JC 強バニ, 中サンダーPP: 30
 
+- DR 6MP
 - 強バニ(+4): ガードされて+2の密着、ヒットして+42
 - ステップ, 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
 
