--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -4,4 +4,15 @@
 
 基本的にはセイスモの間合いを維持したいヴァイパー側と、ラッシュや前歩きで距離を詰める相手側という展開になる。
 
+ヴァイパーは差し合いするよりもバニとセイスモ、ラッシュやハイジャンプで無理やり触りたい。差し合いしても技が短いし。差し合いするならリターンの高いしゃが大パンを狙うくらい。バニやセイスモを警戒させて、大パンやラッシュで触る。
+
+## 牽制
+
+自分が近づくというよりは、セイスモとセイスモフェイントで相手を動かす。
+相手が積極的に動いてくるならセイスモは使わない。
+
 相手が前に出てくるなら2HPサンキャンやバニを置くのもいいし、弱セイスモもある。
+
+## 反撃
+
+ヴァイパーは技が短すぎるので、とっさの反撃は大足にするべき。大パンとか中パンとか空振りがち。
