--- a/games/Street-Fighter/Six/system/対戦方式.md
+++ b/games/Street-Fighter/Six/system/対戦方式.md
@@ -48,6 +48,8 @@ https://www.redbull.com/jp-ja/street-fighter-6-ranked-system
 
 1500MRを維持できないと真にマスターになったとは言えない。
 
+ハイマス以下のクラシックは対空をパリィで誤魔化している人も多い。初手から空ジャンプでもいいくらい。
+
 ## カジュアルマッチ
 
 カジュアルマッチはあくまでも手慣らしの場なので、1先でいい。
