--- a/shared/cooking/ingredients/肉の下準備.md
+++ b/shared/cooking/ingredients/肉の下準備.md
@@ -3,3 +3,5 @@ https://youtu.be/AD6-DnQ13uI?si=ooOG7DXDu3WaotZ9
 
 厚切り肉に中まで塩を浸透させるには15時間かかる。
 重量の1%くらいの塩を満遍なく塗って、肉汁に当たらないように金網に乗せてラップなどはしないで15時間冷蔵庫。
+
+赤身と脂身のバランスを取るために、脂身を切り落として減らす。
