--- a/shared/human/being/well/幸福.md
+++ b/shared/human/being/well/幸福.md
@@ -259,3 +259,6 @@ https://www.sustainability-hub.jp/column/about-personal-relationships/
 人それぞれの幸福がある。
 
 幸福は今すぐ手に入る。何かを手に入れたから幸福になれるわけではない。ただ、心の底から「幸福だ」と感じられる環境づくりに努めることで、より楽に手に入る。
+
+仕事やビジネスは人生の一部でしかない。
+同様に、家庭や結婚、趣味、なども人生の一部でしかない。一つだけを求めすぎると、人生全体としては不幸になりやすい。
