--- a/shared/rest/frameworks/ポモドーロテクニック.md
+++ b/shared/rest/frameworks/ポモドーロテクニック.md
@@ -3,3 +3,5 @@
 ポモドーロテクニックはモチベーション寄りというか、習慣を作っているわけではない。
 
 ポモドーロ・テクニックのような強制的に休憩を挟むフレームワークを使うとバーンアウトしづらい。
+
+ポモドーロテクニックの5分は休憩というよりも何もせずに我慢して、焦らす時間にするといい。25分で何をしてても手を止めて、我慢する。やる気を回復させる。
