--- a/shared/war/戦闘.md
+++ b/shared/war/戦闘.md
@@ -15,3 +15,5 @@
 
 マウントポジションでは握り拳の小指側を下にしてハンマーのように撃ち下ろすのが安全。体をそれほど前に倒さなくても威力が出る。
 対して、密着最大威力は頭突きか掌底。ただ、掌底は前のめりになるし、力の方向として関節周りを怪我しやすい。
+
+上半身への攻撃を避ける方法は、前に避けるダッキングと後ろに避けるスウェイバックがある。
