--- a/shared/lifestyle/meal/drink/酒.md
+++ b/shared/lifestyle/meal/drink/酒.md
@@ -12,3 +12,5 @@
 デキャンタはワインを瓶から移す容器。一旦容器に入れることをデキャンティングまたはデキャンタージュという。酸素と触れることで味や香りが変わるので良し悪し。特に古酒は澱や古くなったコルクやガラスの破片を取り除くために移し替えることがある。
 
 ウイスキーは3000円くらいが基準で、5000円超えるとちょっと高め。
+
+「未成年飲酒」って聞くと「不良やん」の前に「田舎やん」って思う。
