--- a/shared/success/成功.md
+++ b/shared/success/成功.md
@@ -402,3 +402,5 @@ achievementはwork+successで、何かを変えないと達成とは言わない
 learning, thinking, training, なども成功を目的としたもの。
 
 「尊敬できる人に会えることが増えたなら、正しい方向に進んでいるサイン」（出典不明）
+
+「成功とは学びの過程なんだよ。」『CHANCE』
