--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -12,6 +12,8 @@ S90になったらそれ以上は必要ない。
 
 投手が強くても、総合戦力の守備力が低いとエラーが増える。戦力評価で言うと3/5くらいあるとかなりマシ。
 
+総合守備力2はエラーが多い。特に試合終盤のエラーが増える。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
@@ -568,6 +570,9 @@ Eは最低限で、Fはかなり悪い。ただ、できれば使うステータ
 Dあると弾道が1や2でもホームランや長打になる可能性がある。
 
 アベヒかパワヒでないならパワーB、弾道3にする必要はない。外野の頭を越えるほどではない。伸ばすならパワーSまで伸ばさないと無理かも。
+
+弾道1の選手は、パワーDの弾道3が手軽ではある。弾道は1ヶ月で1つ上がる。
+ただ、総合戦力まで考えるとパワーCの弾道2の方が全体の打撃力に繋がる。
 
 ## 守備能力
 
