--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -68,6 +68,7 @@
 
 - 2HP, 弱セイスモ, 強サンダー: 2220
 - 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー: 2850
+- 2HP, 弱セイスモ, ODバニ: 2700
 - 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP: 3120
 - 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP: 3150
 - 2HP, 弱セイスモ, SA1(80%): 3100
@@ -91,14 +92,14 @@
 
 ## 2HP(c), 強サンダーC: 8
 
-- 2HP(c), 強サンダーC, 2MK, JC 弱サンダーPP: 2700
+- 2HP(c), 強サンダーC, MK, JC 弱サンダーPP: 2800
 - 2HP(c), 強サンダーC, ODバニ, SA2(70%): 4560
-- 2HP(c), 強サンダーC, 2MK, JC ODサンダー, SA2(60%): 4640
+- 2HP(c), 強サンダーC, MK, JC ODサンダー, SA2(60%): 4740
 - 2HP(c), 強サンダーC, ODバニ, SA3(60%): 4860
-- 2HP(c), 強サンダーC, 2MK, JC 弱サンダーPP, SA3: 4700
-- 2HP(c), 強サンダーC, 2MK, JC ODサンダー, SA3: 4840
+- 2HP(c), 強サンダーC, MK, JC 弱サンダーPP, SA3: 4800
+- 2HP(c), 強サンダーC, MK, JC ODサンダー, SA3: 4940
 
-2MKをMKにすると100伸びるけど、2MKの方が長くて当たりやすい。
+2HPが届いたら基本的にはMKに繋いでも届く。
 
 ## 2HP(pc), 強サンダーC: 10
 
@@ -158,6 +159,7 @@
 ## 弱/中/強セイスモ
 
 - 弱/中/強セイスモ, JC 強空バニ, 強サンダーPP: 2400
+- 弱/中/強セイスモ, JC 強空バニ, SA1(70%): 2820
 - 弱/中/強セイスモ, JC 強空バニ, SA2(70%): 3660
 - 弱/中/強セイスモ, JC 強空バニ, SA3(70%): 4360
 
@@ -194,15 +196,15 @@ ODセビは2000ダメージ、通常のセビは1400ダメージ。
 
 ## DI(pc)
 
-- DI(pc), 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+- DI(pc), 2HP, 弱セイスモ, ...
 
 ## DI(壁)
 
-- DI(pc), 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
+- DI(壁), 2HP, 弱セイスモ, ...
 
 ## {BO} DI(壁)
 
-- DI, ODセビ, 2HP, 弱セイスモ, JC OD空バニ, ODバニ, SA3
+- DI(壁), ODセビ, 2HP, 弱セイスモ, ...
 
 ## その他
 
