--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
@@ -1,13 +1,15 @@
-## 対応
+## 反撃
 
 - セイスモにジャンプを合わせる
   - 発生24Fで見てからジャンプできる
   - フェイントには注意
 - 地上バニ派生にインパクトを合わせる
 
-## その他
-
-ヴァイパーは後退がシミーになる場面があまりない。最速暴れは択の一つ。
+ヴァイパーは通常技をガードされた後が発生の遅い技になりがちなので、小技に対して割り込んでいくのは大事。
 
 セイスモにパリィを合わせて、相手がキャンセルしてもしなくてもラッシュするのは一つの手。
 セイスモフェイントは27Fあるので、ラッシュが速いキャラなら確定する場合もある。
+
+## その他
+
+ヴァイパーは後退がシミーになる場面があまりない。できれば覚えたい。最速投げ暴れは択の一つ。
