--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -2,18 +2,15 @@
 
 端の前投げが最強。一つの中間目標にするといい。
 
-## DR 2MK
+## 2HP
 
-- 弱セイスモ: 当たるとセイスモコンボに行ける
-- JC 中空バニ: ガードされても五分、距離によっては裏に回る
-
-## DR 2MK, 弱セイスモ
-
-## DR 6MP
-
-- {ガード}
-  - 2LP 2回: 繋ぎ、連続ガード
-  - LP, 2LP: モダン用、連続ガードにならない
+- 強サンダーC: ヒットで+6、ガードされて-1で投げ間合いの外
+- 弱バニ: しゃがみ暴れを潰す、派生するとガードされても+2
+- セイスモ: 7Fまで割り込める、ガードされて-10
+  - JC 強サンダーC: ガードされて-2、ヒット時はセイスモが普通に当たったのと同じコンボ
+- セビ: コパンでもL2になる
+- JC 強空バニ: めくり、ガードされて-2
+- JC 中空バニ: 表、ガードされても五分
 
 ## バニKK
 
@@ -45,4 +42,48 @@
 - セイスモ
   - JC 中空バニ: ガードされても五分
   - JC セイスモ, JC セイスモ, ...: 削り
-  - {ガード}
+  - JC 中サンダー: 連続ガードで-3にする、遠目だと連続ガードにならない、カウンターするとLKが入る
+
+## ラッシュ
+
+- DR 2LP: 短いが発生が早い
+- DR 2MP: 発生が早めでヒットすると2HPが繋がる
+- DR 2MK/6MP: 長い中下段
+- DR 6HK: 長くて判定が強い
+- DR セイスモ: 急激に止まってラッシュ止めに当たる
+- DR 弱サンダー: 発生が遅めの突進技、めり込むと確反
+
+ヴァイパーのラッシュは短いけど多彩。
+弱攻撃のラッシュは短いし2MPが短すぎて繋ぎにくい。DR 2LP, 2HPくらい。
+ラッシュからLP、遅めなら2MKと6MPが基本で、弱サンダーやセイスモ、6HKでラッシュ潰し、セビで差し返しを受け止めてもいい。
+
+## DR 2MK
+
+- 弱セイスモ: 当たるとセイスモコンボに行ける
+- JC 中空バニ: ガードされても五分、距離によっては裏に回る
+
+## DR 6MP
+
+- {ガード}
+  - 2LP 2回: 繋ぎ、連続ガード
+  - LP, 2LP: モダン用、連続ガードにならない
+
+## DR 6HK
+
+長くてめり込みやすい。
+１段目が空振りになる距離で振って相手の差し返し漏れを狙うのも悪くない。
+
+## DR セイスモ
+
+短い距離で止まるので、ラッシュを止めようとする相手に有効。
+DR 2MK/6MPの距離なら中、
+
+## その他
+
+ヴァイパーは火力が高いので、シミーを狙いたい。
+コンボの締めも強サンダー(+1)-PPか、弱サンダーPPか、`セイスモ, JC 空バニ, 中サンダーPP`あたりはシミーに行ける。
+ただ、モダンはHKがなくて伸ばしにくいので、シンプルにAC3でもいい。
+
+J.MKの方がめくりやすい。
+
+単純にHJから裏表とか、単に裏とかの動きが強い。他のキャラと間合いが違う。通常ジャンプとも区別しないといけないし。
