--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -33,15 +33,23 @@
 - {C} MP
 - 2LK
 - 2MP
-- LK
+- LK = 2HP, 強サンダーC, 2MP
 - {C} HK
 - 6MP
 - 2HP
 - MK
 - 2MK
-- 6HK
+- 6HK = 弱セイスモ
 - HP
+- DR LP
 - 2HK
+- (初期位置)
+- DR 2MK
+- DR 6MP = DR 6HK
+- DR HP
+- 中セイスモ
+- 強バニ
+- HJ OD空バニ
 
 ## その他
 
