--- a/shared/art/作品.md
+++ b/shared/art/作品.md
@@ -1,4 +1,6 @@
-# 作品 Art Work
+# Art Work
+
+作品。
 
 どんなに拙い作品でも万年残れば傑作になる。
 
@@ -23,3 +25,8 @@
 良い作品の中でも、特にグレートな作品は限られている。
 
 「良い」作品よりも「すごい」作品を目指す。
+
+「正解は終わるまで予想できない」
+「褒められるか貶されるか」
+「『特になし』が一番駄目だ」
+『かげきしょうじょ』
