--- a/shared/collaboration/organization/組織の意思決定.md
+++ b/shared/collaboration/organization/組織の意思決定.md
@@ -12,3 +12,5 @@
 組織の意思決定においては、誰かが決めたら伝達が必要になる。
 
 それぞれが勝手に動けるのが最速ではある。最善かどうかは別。
+
+石破総理は、批判しかしてこなかった人がトップに立って意思決定を行う立場になるとどうなるか、が示された良いテストケースだった。自分の意思がなくて受動的、批判的な人をトップにしてはならない。
