--- a/shared/game/ゲーム.md
+++ b/shared/game/ゲーム.md
@@ -95,3 +95,10 @@ gameはworkと違って、何も変えないこともある。
 「絶対に勝てるゲームなんてつまらないだろ。そんなのゲームじゃない。」『うみねこのなく頃に』
 
 タイマンじゃない対戦ゲームだとヘイト管理が大事。1人で2人以上から集中して狙われるときつい。
+
+ゲームの終了条件。
+どうしたらゲームオーバーになるか。
+
+その上で、ゲームを終えるため、何らかの目的を達成するためのゲームと、ゲームを終わらせないように続けるゲームがある。
+たとえばテトリスで、できるだけ早く100段消す、なら前者だし、ゲームオーバーにならないように続ける、なら後者。
+ゲームを終えることが目的なら、同時に時間などが計測されることが多い。
