--- a/shared/health/exercise/運動.md
+++ b/shared/health/exercise/運動.md
@@ -31,3 +31,5 @@
 全身がスムーズに動けるように力を抜いているようで力を入れている状態が理想。無駄な力は入ってないが、必要な力が巡っている。
 
 https://x.com/andre_shinayaka/status/1837047754264322556
+
+エクササイズは運動というより健康のための運動、運動療法というべきかも。
