--- a/shared/health/健康診断.md
+++ b/shared/health/健康診断.md
@@ -1,1 +1,3 @@
-検尿は前日に採取キットをトイレに置いておくと忘れない。
+検尿や検便は、前日に採取キットをトイレに置いておくと忘れない。
+
+尿検査の採尿が朝一番なのは食事や活動の影響を減らしたいからなので、夜中に起きてトイレに行っても採尿は朝一番でいい。採尿するまで食事はしないようにして、すぐ寝る。
