--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -81,3 +81,6 @@
 社交では、その人と一緒に生きられるかどうか、がまず重要。その上で、人数が多いと、価値を求められる。
 
 社交のベースは人の一緒にいること。
+
+「やっぱ自分が心底心地いい時って、相手が我慢してるんだよな」
+https://x.com/torotakulove/status/1980816263103541501?s=61
