--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -14,6 +14,18 @@ S90になったらそれ以上は必要ない。
 
 総合守備力2はエラーが多い。特に試合終盤のエラーが増える。
 
+弱い投手がいると総合投手力が下がる。伸びやすいスタミナを上げるか、野手に転向させる。
+
+補給や弾道を上げても総合戦力は上がらない。
+
+走力は一つのステータスしか参照しないので、総合戦力を上げやすい。
+
+総合守備力を上げたかったら、外野や三塁は肩、その他の内野は守備を上げるといい。
+
+起用法設定で代走要員、守備要員、フル出場、途中交代を設定するだけで緑特がついたとみなされて総合戦力の意外性が伸びる。使わない選手に使わない緑特本を使うのもいい。
+
+総合戦力が足りないなら、あと1、2で上がる能力は上げてしまったほうがいい。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
