--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -26,6 +26,8 @@ S90になったらそれ以上は必要ない。
 
 総合戦力が足りないなら、あと1、2で上がる能力は上げてしまったほうがいい。
 
+使わない選手は特化して総合戦力を上げるために使う。特に守備だけ上げるとか。守備固めで出して「盛り上げる」で強化することを考えると肩力でもいいかも。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
