--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -28,6 +28,16 @@ S90になったらそれ以上は必要ない。
 
 使わない選手は特化して総合戦力を上げるために使う。特に守備だけ上げるとか。守備固めで出して「盛り上げる」で強化することを考えると肩力でもいいかも。
 
+エラーが多い原因は捕球より総合守備力なのか？総合守備力2だと結構エラーしてた。
+
+総合戦力の個別の項目は打撃力や投手力が優先で、守備力や機動力はあとでもいいか。ただ、全体の総合戦力を上げやすいのは機動力。
+
+Gは消すべき。総合戦力にも響くし。
+
+F20からE40にするのは結構時間がかかる。それよりは伸びやすいところやEを超えたところを伸ばした方がいいかも。
+
+最低限のステータスまでは共通で上げて、それ以上は性格に合わせたいところ。
+
 ## ポジションごとの育成方針
 
 才能がないところから育てるなら、まずは走力と守備力が高い選手をセカンドとショートにコンバートして、肩力が高い選手をサードとキャッチャーにコンバートして、特に能力が低い選手をファーストにコンバートして、残りは外野で走らせる。なんならファーストとサードと外野はコンバートなしで守備力半分でもしばらくなんとかなる。
@@ -90,6 +100,8 @@ S90になったらそれ以上は必要ない。
 対エースに引っかかるは球速148以上、コントロールC以上、総変化量8以上、を全て満たす場合。球速を上げなければ引っかかりにくい。
 
 https://note.com/blacktristars/n/ncbecd2314c33
+
+今回制球と球速も上げてみたけどいまいちだった。
 
 ## 野手
 
@@ -205,6 +217,11 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 打率高くて盗塁できる選手が強い。盗塁は経験値も良い。
 
+最近二遊間の守備上げてるけどあんま意味ない感じ。走力のほうがいいかも。守備はとりあえずEで十分か？
+序盤はセカンドとショートの守備要らない？そもそも走C守Cくらいまで育てても球取れない感じがする。走B守Eとかの方がいい？
+
+二遊間は打撃捨ててでも走力守備力上げるべきか？
+
 ## 野手の特殊能力
 
 - S:
@@ -259,6 +276,11 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 栄冠はパワーより走力。転がせが強い。ただ、パワーがあると内野の頭を越えるので、相手の守備が良くても安定しやすい。
 
+パワーを伸ばすのはいまのところあまりうまくいってない。4番はパワー型がいいけど、それ以外はやはり走力型にするべきか。
+
+誰をパワー型にするか。
+チャンスに強くて、熱血漢で、ファーストかサード。次点で外野手かな。セカンドやショートはパワーに振る余裕がない。パワヒやプルヒ持ちならなおよし。
+
 ## 守備力
 
 - 打球に追いつけるようになるまで捕球はFでいい
@@ -292,10 +314,9 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 目標:
 
-1. F-F-F-D-E-F: 最低限の盗塁を防ぐ（弱小レベル）
-2. F-F-F-D-E-E: 後逸を減らす
-3. C-D-E-D-E-E: 中堅
-4. B-D-E-C-E-E: 強豪
+1. F-F-F-D-E-F: 弱小（最低限の盗塁を防ぐ）
+2. C-D-E-D-E-E: 中堅
+3. B-D-E-C-E-E: 強豪
 
 捕球が高いと後逸しにくい。
 
@@ -326,13 +347,13 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-F-F-F-E: 最低限のエラーを防ぐ
-2. C-D-E-F-F-E: 中堅
+1. D-F-E-F-F-F: 弱小
+2. C-F-C-F-F-F: 中堅
 3. A-D-B-F-E-E: 強豪
 
 ## 二塁手
 
-- 守備優先（走力D、守備力D）
+- 守備優先
 - 走力と守備力の優先度が高い
 - 捕球の優先度が低い
 - 守備職人があると強い
@@ -340,38 +361,38 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-D-F-D-F: 最低限の二遊間
-2. C-F-C-F-C-F: 中堅
+1. F-F-D-F-E-F: 弱小、最低限の二遊間
+2. E-F-C-F-E-F: 中堅
 3. C-E-A-E-B-F: 強豪
 
 ## 三塁手
 
-- 守備優先
-- 肩力Dを優先する
+- 守備優先（肩力）
 - 走力、守備力、捕球の優先度が低い
-- 送球C以上にしたい
-- 送球E以下は避けたい
+- 送球E以下は避けたい、できればC以上
 
 目標:
 
-1. F-F-F-D-F-F: 左方向への打球が全部内野安打になるのを防ぐ
-2. C-D-E-D-F-F: 中堅
+1. E-F-F-D-F-F: 弱小（最低限の内野安打を防ぐ）
+2. C-F-E-D-F-F: 中堅
 3. B-D-C-C-E-F: 強豪
+
+肩力Dくらいないと左方向への打球が全部内野安打になる。
 
 強豪以上と戦うなら肩力Cはないと簡単に内野安打される。
 とりあえずCあれば走力Aでも簡単には内野安打できない。中堅以下ならDでもなんとかなる。
 
 ## 遊撃手
 
-- 守備優先（走力D、守備力D、肩力E）
+- 守備優先
 - 守備職人があると強い
 - 送球B以上があると強い
 - 送球E以下は避けたい
 
 目標:
 
-1. F-F-D-E-D-F: 最低限の二遊間
-2. C-F-C-F-C-F: 中堅
+1. F-F-D-F-E-F: 弱小
+2. F-F-C-E-E-F: 中堅
 3. C-F-A-D-B-F: 強豪
 
 走力よりも守備力を上げたほうが守りは強い。
@@ -386,8 +407,8 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 目標:
 
-1. F-F-C-F-F-F: 外野フライがだいたい取れる
-2. C-D-C-F-F-F: 中堅
+1. F-F-C-F-F-F: 弱小、外野フライがだいたい取れる
+2. D-F-C-F-F-F: 中堅
 3. C-D-A-E-E-E: 強豪
 
 まずはボールに追いつかないとどうしようもない。
@@ -533,12 +554,12 @@ Eは最低限で、Fはかなり悪い。ただ、できれば使うステータ
 性格ランキング:
 
 1. 天才肌: かなり成長しやすい、伝令「助言」が優秀、キャプテン時に好イベントがある
-2. 内気: 戦術「魔物」が壊れている、攻撃・守備伝令「励ます」が優秀、変化球が伸びやすい
-3. お調子者: 野手の戦術がどちらも全体バフで強力、キャプテン時に好イベントがある、走力が伸びやすい
-4. 熱血漢: 守備伝令「盛り上げる」が優秀
-5. したたか: 戦術「ゆさぶる」が全体デバフで強力、「くせ者」も魔物との相性がいい、変化球や走力が伸びやすい
-6. ごくふつう: 満遍なく成長する、戦術「ファイト」で調子が安定するので代打や中継ぎ向き
-7. やんちゃ: 守備伝令「盛り上げる」が優秀、戦術が弱い
+2. 内気: 何枚あってもいい。戦術「魔物」が壊れている。変化球と守備力が伸びやすい。
+3. お調子者: 何枚あってもいい。野手の戦術がどちらも全体バフで強力。キャプテン時に好イベントがある。走力が伸びやすい。
+4. 熱血漢: 守備伝令「盛り上げる」が優秀。戦術も無難に強い。
+5. ごくふつう: 無難。満遍なく成長する、戦術「ファイト」で調子が安定するので代打や中継ぎ向き
+6. したたか: 変化球や走力が伸びやすいのでポジションによってはあり。戦術「ゆさぶる」が全体デバフで強力、「くせ者」も栄冠向き。
+7. やんちゃ: ミートとパワーが伸びやすいのでポジションによってはあり。守備伝令「盛り上げる」が優秀。戦術が弱い。
 8. クール: 伝令「助言」が攻守ともに優秀、戦術が弱い、制球やミートが伸びやすい
 
 占い師は天才肌と内気以外変えて、内気を狙う。
