--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -6,6 +6,8 @@
 
 ヴァイパーは差し合いするよりもバニとセイスモ、ラッシュやハイジャンプで無理やり触りたい。差し合いしても技が短いし。差し合いするならリターンの高いしゃが大パンを狙うくらい。バニやセイスモを警戒させて、大パンやラッシュで触る。
 
+ヴァイパーは通常技が短いので、当てに行くのは苦手。置きも弱い。差し合いではまず差し返しやフェイント。相手を動かす。相手が動かなくなって初めて当てに行く。まぁ、それはどのキャラも同じだけど、ヴァイパーは特に顕著。
+
 ## 牽制
 
 自分が近づくというよりは、セイスモとセイスモフェイントで相手を動かす。
