--- a/games/Street-Fighter/差し合い.md
+++ b/games/Street-Fighter/差し合い.md
@@ -64,3 +64,5 @@ https://youtu.be/wNKJnScQduo?si=4ljViRwEFvPreHH6
 差し合いは後ろに下がるのが強い。ただ、下がるばかりだと端に追い込まれて差し合いに負けるので、押し返したり入れ替えたりするプランが必要。
 
 ジャンプ攻撃をガードするのはすでに差し合いに負けているので、ビビってガードするくらいなら対空を狙って食らったほうがいい。いずれ対空できるようになる。
+
+差し合いの基本は差し返し。当てに行くのは相手が動かなくなってから。
