--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -8,6 +8,8 @@
 
 ヴァイパーは通常技が短いので、当てに行くのは苦手。置きも弱い。差し合いではまず差し返しやフェイント。相手を動かす。相手が動かなくなって初めて当てに行く。まぁ、それはどのキャラも同じだけど、ヴァイパーは特に顕著。
 
+ヴァイパーで「ひまだな」って思ったらフェイントを入れるかバニで突っ込む。無理に近づく必要はない。
+
 ## 牽制
 
 自分が近づくというよりは、セイスモとセイスモフェイントで相手を動かす。
