--- a/games/Street-Fighter/Six/守りの基本.md
+++ b/games/Street-Fighter/Six/守りの基本.md
@@ -16,6 +16,9 @@
 
 https://youtube.com/watch?v=xhg2IXDGTpk&si=5jasO7sNVL4pjoPW
 
+確反以外で毎回切り返そうとするとバレて狩られるので、切り返しは控えめにする。フレーム有利でも、あくまでも相手主導で攻められて状況不利だと考える。
+切り返すのは相手がフレーム不利なのに通常技で手を出してくるタイミングと噛み合えばいい。
+
 ## 守りの読み合い
 
 守る側は基本的に無敵技とジャンプ入れっぱの二択でほとんど守れる。ただ、リスクやゲージの問題がある。
