--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -784,3 +784,10 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 趣味や経歴、出身などの情報を仕事の自己紹介でも伝える。
 
 スト6のCFNで見れる対戦動画をYouTubeに上げるだけでも、スト6を起動してネットワークに接続する、動画を検索する、YouTubeの操作感で見れるようにする、といった労働を代替していて価値がある。
+
+ビジネスの核は貢献。誰かに何かを与えること。対価をもらうかどうかはビジネスを維持するためのファイナンスの部分で、ビジネスそのものではない。
+
+自分に足りないものよりも、誰かに足りないものを探す。
+
+誰かに足りないものを探すのがビジネスの基本。ないものを与える。
+ただ、自分が与えられるものを探さないといけない。ビジネスのためにわざわざ何かを欲するのは面倒。
