--- a/shared/change/history/歴史.md
+++ b/shared/change/history/歴史.md
@@ -28,3 +28,6 @@ GeoCron
 http://geacron.com/home-en/
 
 指定した年の国境を見れるサイト。
+
+世界の歴史を学んだら本当に馬鹿しかいなくて、この世界の歴史とは失敗の歴史なんだと思える。
+毛沢東が1億人殺してるのとか考えると個人の失敗なんて小さなものだ。
