--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -184,3 +184,5 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 声色を変える時は声のポジションが変わる。逆にいうと、声のポジションが不安定だと無駄に声色や響きが変わってしまう。
 
 ウタカタララバイは単調になりがちなので、声色で抑揚をつけるのが大事。
+
+舌の位置は声色に結構影響する。
