--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -1,8 +1,10 @@
 ## 対空
 
-- 強サンダーPP
-  - ステップ
-    - 前進, 前投げ
+- {空} 強サンダーPP
+  - 前進
+    - 2HP, ...
+    - 前投げ
+      - {ジャンプ}, 強サンダーPP, ...
 
 ## セイスモコンボ
 
@@ -17,11 +19,12 @@
 モダンならAC3で簡単。
 クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。
 
-## セイスモコンボに繋ぐ
+## 2HPに繋ぐ
 
-- DI(pc), 2HP, 弱セイスモ, ...
-- DI(壁), 2HP, 弱セイスモ, ...
-- {Dリバ}, 2MP(pc), 2HP, 弱セイスモ, ...
+- DR 2MK, 2HP, ...
+- DI(pc), 2HP, ...
+- DI(壁), 2HP, ...
+- {Dリバ}, 2MP(pc), 2HP, ...
 
 ## 柔道
 
@@ -50,6 +53,19 @@
     - ガード
 
 持続当てになるのでシミーを狙える。
+
+## 強攻撃から中攻撃に繋ぐコンボ
+
+- 2HP, 強サンダーC
+  - {ヒット}
+    - 2MP, 弱サンダーPP, ...
+  - {ガード}
+    - ガード
+
++5以上の起き上がりで頻出。
+相打ちになった場合の処理も考えると、強サンダー(+1)-PPから重ねる練習でもいい。
+
+モダンだと起き上がりに重ねて中攻撃に繋がるルートがこれしかないので優先度が高い。
 
 ## 弱サンダーで締めるコンボ
 
@@ -84,20 +100,6 @@
     - {ガード}
       - 前投げ
       - 後退
-
-## 強攻撃から中攻撃に繋ぐコンボ
-
-- 2HP, 強サンダーC
-  - {ヒット}
-    - 2MP, 弱サンダーPP, ...
-    - 2MP, ODセイスモ, JC 中/強空バニ, ...
-  - {ガード}
-    - ガード
-
-+5以上の起き上がりで頻出。
-相打ちになった場合の処理も考えると、強サンダー(+1)-PPから重ねる練習でもいい。
-
-モダンだと起き上がりに重ねて中攻撃に繋がるルートがこれしかないので優先度が高い。
 
 ## 負荷の高いサンダーキャンセルコンボ
 
