--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -48,13 +48,15 @@
   - DR HP: 4F遅れ、相打ち狙い
   - DR 2MK(+1): ヒットで2HP、ガードで+4
   - DR(+8F以上) 前投げ: 最速で5F遅れ
+  - 弱バニ(+4): 距離で持続当てになる、一部の4-8F技と相打ちになって不利、ガードで中足の間合い
+  - 弱サンダー(+3): ヒットで4、ガードされて-1で投げ間合いの外
 
 ## 弱サンダーPP: 37
 
 - ステップ
   - 前進
     - 前投げ
-  - 後退: シミー
+    - 後退: シミー、その場受け身はすぐ後退で間に合う
 - DR 6MP
 - DR 2MK
 - {端}
@@ -93,6 +95,16 @@
 
 - LP/2LP/2LK, 2LP 2回, LK, 強サンダー
 - セイスモ, 強サンダー
+
+## {空} 強サンダーPP
+
+普通に対空すると25-30の範囲で、ほとんど26-29くらい。
+
+- 前進
+  - 前投げ
+
+先端付近で当たると投げが届きづらいのでステップで密着するといい。
+後退がシミーにならないのでシミーはバクステかバニにする。
 
 ## ODサンダー: 42
 
