--- a/shared/care/tips/相手を知る.md
+++ b/shared/care/tips/相手を知る.md
@@ -83,3 +83,6 @@
 自分が考えられる以上のことを他人が考えていても理解できない。他人の考えを理解するには、まず自分が考えないといけない。
 
 話が途切れた時に一方だけが質問して話題を振っている場合、相手はその人に興味がない。
+
+- 最近良いことあった？
+- 最近何かに困ってる？
