--- a/shared/communication/frameworks/coaching/コーチの役割.md
+++ b/shared/communication/frameworks/coaching/コーチの役割.md
@@ -13,3 +13,5 @@ https://youtube.com/watch?v=vE1UN0z2jTs&si=BfxFJlDX9Su89gG0
 - 成功を阻害する要因を取り除く
 - 目標を達成するために「見たくないもの」や「聞きたくないもの」に注意を向ける
 - そのための観察と介入
+
+コーチはマネージャーに近い。あるいはコーチングがマネジメントの一部と考えるべきかも。プレイヤーのパフォーマンスを最大化するために、プレイヤーを成功に導く。
