--- a/shared/communication/frameworks/coaching/コーチング.md
+++ b/shared/communication/frameworks/coaching/コーチング.md
@@ -81,3 +81,6 @@ management 的に成功させるというよりは、achievement 的に目標を
 
 「選手にとっての幸せっでのはな。自分を理解しでぐれて、そのうえで、最大限の評価をしでもらえるごとよ」
 （『ドラフトキング』）
+
+成功に導くのがコーチング。
+文化を伝える教師や技術を伝えるメンターとは文脈が違うものの、方法としては近いところにある。
