--- a/shared/development/新しいことを学ぶ.md
+++ b/shared/development/新しいことを学ぶ.md
@@ -3,3 +3,7 @@
 英文を読むためには、英単語を知らないといけない。
 同様に、新しい分野に触れる時は必ず語彙から学ぶ。語彙が少ないと何を言っているかわからない。
 また、ただ覚えるだけじゃなくて、ちゃんと意味がわかるようにする。
+
+新しいことを学ぶときは、20時間を基準にする。20時間練習するまでは諦めない。
+
+1. 学びたいことを小さく分ける
