--- a/shared/engagement/tips/謝る.md
+++ b/shared/engagement/tips/謝る.md
@@ -1,2 +1,6 @@
 謝るからと言って、相手の意見を受け入れる必要はない。
 謝るのは単に関係を切らさないためで、別に意見が割れていても付き合い続けることはできる。
+
+謝るかどうかは相手と付き合いを続けたいかどうか。
+「自分が悪かった」ではなくて、「不快にさせてごめん」と謝る。自分が悪いかどうかは関係ない。
+価値観があまりにも合わなかったら縁を切るのも方針の一つではある。
