--- a/shared/music/tips/リズムを把握する.md
+++ b/shared/music/tips/リズムを把握する.md
@@ -6,3 +6,5 @@
 
 キックの音は「アタック」「ボディ」「テール」の３部分に分けて捉える。
 長く音が鳴るので4拍子だと通常は「ド、ー、ン、＿」のように鳴る。
+
+リズムも通常は韻を踏んでいる。繰り返されているパターンをまずは捉えよう。革命道中なんかは特徴的な繰り返しがわかりやすい。
