--- a/shared/technique/技術.md
+++ b/shared/technique/技術.md
@@ -159,3 +159,6 @@ engineeringは理論的。
 概論、基礎、応用。
 
 情報や知識だけじゃなくて、経験や練習を必要とする。
+
+アートやスポーツなどのタレント業に関わるには、パフォーマー、インストラクター、マネージャー、などの職業がある。
+パフォーマーには卓越性が必要だけど、それ以外は平凡でも価値がある場合はある。
