--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -10,6 +10,9 @@
 
 ヴァイパーで「ひまだな」って思ったらフェイントを入れるかバニで突っ込む。無理に近づく必要はない。
 
+セイスモ、HJ空バニ、2HP、DR 2MK、DR 6MP、DR 6HKなどで触りに行く。近いとLPも使うことがある。
+2MP、MK、2MK、などはリターンがないのであまり当てに行くのには使わない。どちらかというと置き。
+
 ## 牽制
 
 自分が近づくというよりは、セイスモとセイスモフェイントで相手を動かす。
