--- a/games/Street-Fighter/差し合い.md
+++ b/games/Street-Fighter/差し合い.md
@@ -66,3 +66,13 @@ https://youtu.be/wNKJnScQduo?si=4ljViRwEFvPreHH6
 ジャンプ攻撃をガードするのはすでに差し合いに負けているので、ビビってガードするくらいなら対空を狙って食らったほうがいい。いずれ対空できるようになる。
 
 差し合いの基本は差し返し。当てに行くのは相手が動かなくなってから。
+
+差し合いの間もまずは相手の情報を集める。ジャンプして手を出さずに着地してみたり、ラッシュして手前で止まってみたり、遠目で隙の少ない技を振ってみたりして、相手の対応を見る。
+
+差し合いは三すくみというよりも、隙のない技で差し返しを誘って差し返す4つ目が存在する。
+
+じゃんけんと違って、差し返しは見てから後出ししている。三すくみで一番強い。
+
+差し合いはまずお互いに差し返しを狙うのが基本。ラッシュなどで無理やり触ろうとしてくるなら見てから止めたり、確反を狙ったりする。
+
+差し合いは待ちが強いけど、何もしないと相手に攻撃を当てられてドライブゲージや体力を削られる。
