--- a/shared/job/経歴.md
+++ b/shared/job/経歴.md
@@ -15,3 +15,6 @@ https://qiita.com/saoyagi2/items/2c0bb9647ee9e16b7f4b
 ただ、同じように高いレベルの同僚を求めて会社に所属する技術者もいる。
 
 キャリアだけが実績ではないけど、自分で起業してもうまくいかない被雇用者ならキャリアを積むのが定石。
+
+キャリアは労働者的な考え方で、資本家的ではない。雇われ経営者も労働者。
+資本家なら経歴よりも資産の方が大事。どれだけ良い資産を持っているか。
